2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b38
	
	* upgrade album version to 12, to change item owner names
	  from "nobody" to album owner.  This is for people who
	  upgraded between b32 and b36.

2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b37
	
	* During upgrade, item owner for all items will default to album owner, 
	  instead of "nobody"

	* Bug fix in the owner code.  If owner is unknown, it now will not be 
	  printed as NOBODY.

2003-06-28  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b36

	* Fixed bugs in edit_appearance and photo_owner where we were using
	  the php short open tags.

	* Fix a bug in AlbumItem where it crashes if the item owner is not set.

2003-06-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b35

	* Fixed HTML error in layout/breadcrumb.inc. (Bug #760294)

	* Fixed CVS "Id" variables that were displaying in HTML. Some of
	  these were generating PHP premature header errors.

2003-06-26  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b34

	* Fixed erroneous error message when authentication fails in gallery_remote2.

2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b33

	* Added missing </td> to edit_appearence.php.

2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b32

	* Added item owner.  Now each individual album item has an owner.
	  Whether or not the owner can modify or delete her own images and
	  whether the name of the owner is displayed is configurable at album
	  level.

2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b31

	* added CVS "Id" variable to every file except:
		./configure.bat   ./secure.bat ./setup/.htaccess
		./setup/mod_rewrite.template ./setup/php_value.template

2003-06-26  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b30

	* Fix small html errors in view_photo.php.  Bug #760481.

2003-06-26  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b29
